# internal/gophermart/dto/responses/order/order_response_dto.go
@@ -1,0 +1,8 @@
+package order
+
+type OrderResponseDto struct {
+	Number     string  `json:"number"`
+	Status     string  `json:"status"`
+	Accrual    float64 `json:"accrual"`
+	UploadedAt string  `json:"uploaded_at"`
+}
